# Brilliant-Minds

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  tests.http
docs/: AGENTS.md  API-TESTING.md  ARCHITECTURE.md  BACKEND.md  FRONTEND.md  PRD.md  agent-framework-memory-and-connectors.md  blueprint.md  mvp.md
docs/developer/: git-workflow.md
docs/poc/: cognitive-load-reduction-assistant.md
docs/slides/: BrilliantMindsSlides.pptx
frontend/: README.md  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AccessibilityWrapper.tsx  AppChrome.tsx  BeforeAfterPreview.tsx  BrandMark.tsx  ChatResultCard.tsx  PipelineTimeline.tsx  ReadingLevelInfo.tsx
frontend/context/: UserContext.tsx
frontend/lib/: api.ts  profile.ts  types.ts
infra/: README.md  main.bicep  main.parameters.bicepparam  main.parameters.json
infra/modules/: ai-search.bicep  cosmos-db.bicep  document-intelligence.bicep  embedding-model.bicep  generative-model.bicep  project.bicep  storage-account.bicep
src/: __init__.py  devui_app.py  main.py
src/agents/: __init__.py  adaptation_agent.py  agentic_rag_agent.py  base_agent.py  brain_agent.py  calm_evaluator_agent.py  calm_filter_agent.py  comprehension_agent.py  concept_agent.py  explainability_agent.py  explainer_agent.py  fatigue_agent.py  focus_assistant_agent.py  glossary_agent.py  learning_support_agent.py  orchestrator_agent.py  orchestrator_service.py  parser_agent.py  simplifier_agent.py  task_decomposer_agent.py  triage_agent.py  (+1 more)
tests/: test_auth_service.py
(+47 files in other folders)
